Human vs Human function mode completed

--- a/Rubik's Flip.ipynb
+++ b/Rubik's Flip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "04dd4ba4",
+   "id": "572dbf5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "d48de5d1",
+   "id": "b4f3372f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "95003598",
+   "id": "68fe6451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "129b844b",
+   "id": "83ca94dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "f93ff4be",
+   "id": "7bd9fadb",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "cefd59ac",
+   "id": "3a53d3e8",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "34e807ef",
+   "id": "e740cd81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "938f1bdd",
+   "id": "a4339c24",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "7858c466",
+   "id": "2568d54f",
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "id": "26f5b9cb",
+   "execution_count": 311,
+   "id": "f6d88342",
    "metadata": {},
    "outputs": [
     {
@@ -310,23 +310,23 @@
      "output_type": "stream",
      "text": [
       "------------------\n",
-      "|   |   |   |   |\n",
+      "| W | B | Y | Y |\n",
       "------------------\n",
-      "|   | Y |   |   |\n",
+      "| B | Y | R | R |\n",
       "------------------\n",
-      "|   | Y |   | R |\n",
+      "| B | W | B | R |\n",
       "------------------\n",
-      "|   |   | B |   |\n",
+      "|   | B | B | R |\n",
       "------------------\n",
-      "1\n",
+      "0\n",
       "------------------\n",
-      "|   |   |   |   |\n",
+      "| W | B | Y | Y |\n",
       "------------------\n",
-      "|   | Y |   |   |\n",
+      "| B | Y | R | R |\n",
       "------------------\n",
-      "|   | Y |   | R |\n",
+      "| B | W | B | R |\n",
       "------------------\n",
-      "|   |   | B |   |\n",
+      "|   | B | B | R |\n",
       "------------------\n"
      ]
     }
@@ -381,7 +381,7 @@
     "    if len(list_neighbours)!=0:\n",
     "        return [1,list_neighbours]\n",
     "    elif len(list_neighbours)==0:\n",
-    "        return 0\n",
+    "        return [0]\n",
     "        \n",
     "print(isFlippable(current_State, PROGRAM_WHITE)[0])\n",
     "print_State(current_State)"
@@ -389,8 +389,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 317,
+   "id": "5c074a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B | W | B | R |\n",
+      "------------------\n",
+      "|   | B | B | R |\n",
+      "------------------\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check ifFlippable for whole state- including both users\n",
+    "print_State(current_State)\n",
+    "def isFlippable_State(state):\n",
+    "    if isFlippable(state,USER_RED)[0] or isFlippable(state, PROGRAM_WHITE)[0]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "print(isFlippable_State(current_State))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "id": "fa415191",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "|   | B | Y | B |\n",
+      "------------------\n",
+      "| B | Y | R |   |\n",
+      "------------------\n",
+      "|   | R |   | R |\n",
+      "------------------\n",
+      "|   |   | B |   |\n",
+      "------------------\n",
+      "[1, [[1, 3], [2, 2], [2, 0], [2, 2], [3, 1], [2, 2], [1, 3], [3, 3], [0, 0], [1, 3], [0, 0], [2, 0], [3, 1], [3, 3], [2, 2]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_State(current_State)\n",
+    "print(isFlippable(current_State, USER_RED))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 265,
-   "id": "c88ba308",
+   "id": "826133c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "02bb2eaf",
+   "id": "558b069d",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "2fcf1822",
+   "id": "6369305c",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "bf3f3396",
+   "id": "1388785b",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "a52f421b",
+   "id": "38ea5033",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "25adb471",
+   "id": "319ba260",
    "metadata": {},
    "outputs": [
     {
@@ -673,8 +737,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "id": "37dc9cf1",
+   "execution_count": 320,
+   "id": "61ef82d0",
    "metadata": {},
    "outputs": [
     {
@@ -693,8 +757,8 @@
     "        #if blue/red locked:\n",
     "            #check for at least 3 in a row for blue/red\n",
     "        #check isTerminal everytime after one flips and inserts \n",
-    "    userType=PROGRAM_YELLOW\n",
-    "    if not isFlippable(s,userType)[0]:\n",
+    "#     userType=PROGRAM_YELLOW\n",
+    "    if not isFlippable_State(s):\n",
     "        for line in range(0,4):\n",
     "            #check for row completion\n",
     "            if s.cell[line][0]!=BLANK and s.cell[line][0]==s.cell[line][1] and s.cell[line][1]==s.cell[line][2]:\n",
@@ -756,8 +820,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 322,
+   "id": "54ba3ab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "| Y | Y | Y | Y |\n",
+      "------------------\n",
+      "| Y | Y | Y | Y |\n",
+      "------------------\n",
+      "| Y | Y | Y | Y |\n",
+      "------------------\n",
+      "| Y | Y | Y |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_State(test_State)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1562d60f",
+   "id": "69468a61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "7bc29994",
+   "id": "7e1e952a",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "7a0a5d11",
+   "id": "efd9f5de",
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "370d73bf",
+   "id": "22268d8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,10 +1075,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1d4f5879",
+   "execution_count": 339,
+   "id": "675c5f26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lets play the game! The first player will be Player 1 and second player will be Player 2\n",
+      "Player 1 has dice Red/Blue and Player 2 has dice White/Yellow\n",
+      "Player 1 goes first!\n",
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B |   | B | R |\n",
+      "------------------\n",
+      "|   |   | R | R |\n",
+      "------------------\n",
+      "Please input your move:\n",
+      "Row (1-4): 3\n",
+      "Col (1-4): 2\n",
+      "Which face do you want to place? (Red/Blue): Blue\n",
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B | B | B | R |\n",
+      "------------------\n",
+      "|   |   | R | R |\n",
+      "------------------\n",
+      "\n",
+      "-------------------------------------------\n",
+      "It's Player 2's turn\n",
+      "Please tell the row of the tile you want to flip? (Row 1-4): 3\n",
+      "Please tell the column of the tile you want to flip? (Row 1-4): 2\n",
+      "Please input the row where you want to flip? (Row 1-4): 4\n",
+      "Please input the column where you want to flip? (Row 1-4): 2\n",
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B |   | B | R |\n",
+      "------------------\n",
+      "|   | R | R | R |\n",
+      "------------------\n",
+      "Please input your move:\n",
+      "Row (1-4): 3\n",
+      "Col (1-4): 2\n",
+      "Which face do you want to place? (White/Yellow): Yellow\n",
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B | Y | B | R |\n",
+      "------------------\n",
+      "|   | R | R | R |\n",
+      "------------------\n",
+      "\n",
+      "-------------------------------------------\n",
+      "It's Player 1's turn\n",
+      "No valid flip available! Just place your tile!\n",
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B | Y | B | R |\n",
+      "------------------\n",
+      "|   | R | R | R |\n",
+      "------------------\n",
+      "Please input your move:\n",
+      "Row (1-4): 4\n",
+      "Col (1-4): 1\n",
+      "Which face do you want to place? (Red/Blue): Blue\n",
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B | Y | B | R |\n",
+      "------------------\n",
+      "| B | R | R | R |\n",
+      "------------------\n",
+      "\n",
+      "-------------------------------------------\n",
+      "Player 1 with dice Red/Blue wins\n"
+     ]
+    }
+   ],
    "source": [
     "def humanVhuman():\n",
     "    print(\"Lets play the game! The first player will be Player 1 and second player will be Player 2\")\n",
@@ -1004,21 +1184,37 @@
     "    turn=2\n",
     "    print_State(current_State)  \n",
     "    \n",
+    "    print()\n",
+    "    print(\"-------------------------------------------\")\n",
+    "    \n",
     "    #Play until terminal state\n",
     "    while True:\n",
     "        if turn==1:\n",
     "            print(\"It's Player 1's turn\")\n",
     "            userType=USER_RED\n",
-    "            human_flip(userType)\n",
+    "            \n",
+    "            #Check if flippable before asking to flip\n",
+    "            if isFlippable(current_State, PROGRAM_WHITE)[0]:\n",
+    "                human_flip(userType)\n",
+    "            else:\n",
+    "                print(\"No valid flip available! Just place your tile!\")\n",
     "            print_State(current_State)\n",
     "            humanMove_P1()\n",
     "            turn=2\n",
     "            print_State(current_State)\n",
+    "        \n",
+    "         \n",
+    "     \n",
     "\n",
     "        elif turn==2:\n",
     "            print(\"It's Player 2's turn\")\n",
     "            userType=PROGRAM_WHITE\n",
-    "            human_flip(userType)\n",
+    "            \n",
+    "            if isFlippable(current_State, USER_RED)[0]:\n",
+    "                human_flip(userType)\n",
+    "            else:\n",
+    "                print(\"No valid flip available! Just place your tile!\")\n",
+    "                \n",
     "            print_State(current_State)\n",
     "            humanMove_P2()\n",
     "            turn=1\n",
@@ -1049,8 +1245,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 333,
+   "id": "e267339f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No valid flip available! Just place your tile!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if isFlippable(current_State, PROGRAM_WHITE)[0]:\n",
+    "    human_flip(userType)\n",
+    "else:\n",
+    "    print(\"No valid flip available! Just place your tile!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "id": "e8dfaf8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "------------------\n",
+      "| W | B | Y | Y |\n",
+      "------------------\n",
+      "| B | Y | R | R |\n",
+      "------------------\n",
+      "| B |   | B | R |\n",
+      "------------------\n",
+      "|   |   | R | R |\n",
+      "------------------\n",
+      "[1, [[2, 1]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(isTerminal(current_State))\n",
+    "current_State.cell[3][1]=0\n",
+    "print_State(current_State)\n",
+    "print(isFlippable(current_State, PROGRAM_WHITE))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "38b02e5b",
+   "id": "47660f58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fix is terminal- check if empty space- check false wins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18c7035c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "7dcccf10",
+   "id": "92043f9b",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "92d1c1c9",
+   "id": "55fb5d41",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a43fd98",
+   "id": "e71a1203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ce0945d",
+   "id": "43ca93ac",
    "metadata": {},
    "outputs": [],
    "source": []
