Added new cases in isTerminal state

--- a/Rubik's Flip.ipynb
+++ b/Rubik's Flip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "97bc718e",
+   "id": "81ba9de9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "27d3fe93",
+   "id": "4e0bf0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "39961807",
+   "id": "24276565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "943f06e4",
+   "id": "cefd942e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 414,
-   "id": "161cf49b",
+   "id": "3a8a7c67",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "4c2586fd",
+   "id": "3900f8c7",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "bf463afa",
+   "id": "e1e10c4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "e019c45c",
+   "id": "7f9a7d2c",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "48fdcb29",
+   "id": "0de83e7b",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "535bb3b5",
+   "id": "74b3f1c1",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "id": "f81eebcd",
+   "id": "a9071667",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "id": "70dc1403",
+   "id": "5d408455",
    "metadata": {},
    "outputs": [
     {
@@ -455,12 +455,13 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "a33fd396",
+   "id": "da890819",
    "metadata": {},
    "outputs": [],
    "source": [
     "#returns true if the user can flip the provided tile to the given new place\n",
     "#Creates neighbours of given tile and then check if they are valid neighbours to flip and if the given operator is in valid neighbors return true\n",
+    "#fliprow and fliprow are initial positions of tile, operator holds new positions\n",
     "def isValidFlip(state,tiletoFlip,flipRow,flipCol,operator,userType):\n",
     "    #check if it's your own tile, if it is return false\n",
     "    if userType==1 or userType==2:\n",
@@ -507,8 +508,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 439,
+   "id": "83684ba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isFlippableTile(state,flipRow,flipCol):\n",
+    "       \n",
+    "    up=flipRow-1\n",
+    "    down=flipRow+1\n",
+    "    left=flipCol-1\n",
+    "    right=flipCol+1\n",
+    "\n",
+    "    neighbours=[[flipRow, left], [flipRow, right], [up, flipCol],[down,flipCol]]\n",
+    "\n",
+    "#     print(neighbours)\n",
+    "    \n",
+    "#     flipArea=[operator.row, operator.col]\n",
+    "\n",
+    "    #make a tile and its neighbour(create a object of each opponent tile and make a list)\n",
+    "    #now findValidneighbours\n",
+    "\n",
+    "    #Now check if the neighbors are valid\n",
+    "    valid_Neighbours=[]\n",
+    "    for neighbour in neighbours:\n",
+    "        operator.row=neighbour[0]\n",
+    "        operator.col=neighbour[1]\n",
+    "        if isValidMove(state, operator):\n",
+    "            valid_Neighbours.append(neighbour)\n",
+    "#             list_neighbours.append(neighbour)\n",
+    "    \n",
+    "#     print(valid_Neighbours)\n",
+    "#     print(len(valid_Neighbours))\n",
+    "    if len(valid_Neighbours)>=1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "#     if flipArea in valid_Neighbours:\n",
+    "#         return 1\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baca9406",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "id": "54f7a5d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "------------------\n",
+      "|   | Y | Y | Y |\n",
+      "------------------\n",
+      "| B | R | B | Y |\n",
+      "------------------\n",
+      "| R | W |   | W |\n",
+      "------------------\n",
+      "| R | W | R |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_State.cell[2][2]=0\n",
+    "print(isFlippableTile(current_State,3,2))\n",
+    "print_State(current_State)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 248,
-   "id": "ba9ab8a8",
+   "id": "38fa645d",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "449a7a85",
+   "id": "42017556",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 364,
-   "id": "44bb975e",
+   "id": "91fe2b04",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 363,
-   "id": "1c2fa3ca",
+   "id": "63e9b712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "74463dad",
+   "id": "7b7ee30f",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "42f0b58f",
+   "id": "e8acda85",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "77563b90",
+   "id": "54bd5b4f",
    "metadata": {},
    "outputs": [
     {
@@ -779,15 +865,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
-   "id": "ad81cf15",
+   "execution_count": 456,
+   "id": "dcb605bf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "5\n"
      ]
     }
    ],
@@ -800,48 +886,60 @@
     "            #check for at least 3 in a row for blue/red\n",
     "        #check isTerminal everytime after one flips and inserts \n",
     "#     userType=PROGRAM_YELLOW\n",
-    "    if not isFlippable_State(s):\n",
-    "        for line in range(0,4):\n",
-    "            #check for row completion\n",
-    "            if s.cell[line][0]!=BLANK and s.cell[line][0]==s.cell[line][1] and s.cell[line][1]==s.cell[line][2]:\n",
+    "#     if not isFlippable_State(s):\n",
+    "    for line in range(0,4):\n",
+    "        #check for row completion\n",
+    "        if s.cell[line][0]!=BLANK and s.cell[line][0]==s.cell[line][1] and s.cell[line][1]==s.cell[line][2]:\n",
+    "            if not isFlippableTile(current_State,line,0) and not isFlippableTile(current_State,line,1) and not isFlippableTile(current_State,line,2):\n",
     "                return s.cell[line][0] #this will return R,B,W,or Y and thats how we know who won\n",
     "\n",
-    "            if s.cell[line][1]!=BLANK and s.cell[line][1]==s.cell[line][2] and s.cell[line][2]==s.cell[line][3]:\n",
+    "        if s.cell[line][1]!=BLANK and s.cell[line][1]==s.cell[line][2] and s.cell[line][2]==s.cell[line][3]:\n",
+    "            if not isFlippableTile(current_State,line,1) and not isFlippableTile(current_State,line,2) and not isFlippableTile(current_State,line,3):\n",
     "                return s.cell[line][1]\n",
     "\n",
-    "            #check for column completion\n",
-    "            if s.cell[0][line]!=BLANK and s.cell[0][line]==s.cell[1][line] and s.cell[1][line]==s.cell[2][line]:\n",
+    "        #check for column completion\n",
+    "        if s.cell[0][line]!=BLANK and s.cell[0][line]==s.cell[1][line] and s.cell[1][line]==s.cell[2][line]:\n",
+    "            if not isFlippableTile(current_State,0,line) and not isFlippableTile(current_State,1,line) and not isFlippableTile(current_State,2,line):\n",
     "                return s.cell[0][line]\n",
     "\n",
-    "            if s.cell[1][line]!=BLANK and s.cell[1][line]==s.cell[2][line] and s.cell[2][line]==s.cell[3][line]:\n",
+    "        if s.cell[1][line]!=BLANK and s.cell[1][line]==s.cell[2][line] and s.cell[2][line]==s.cell[3][line]:\n",
+    "            if not isFlippableTile(current_State,1,line) and not isFlippableTile(current_State,2,line) and not isFlippableTile(current_State,3,line):\n",
     "                return s.cell[1][line]\n",
     "\n",
     "\n",
-    "            #Check for diagonal- Total 8 diagonal ways\n",
-    "        if s.cell[2][0]!=BLANK and s.cell[2][0]==s.cell[1][1] and s.cell[1][1]==s.cell[0][2]:\n",
+    "        #Check for diagonal- Total 8 diagonal ways\n",
+    "    if s.cell[2][0]!=BLANK and s.cell[2][0]==s.cell[1][1] and s.cell[1][1]==s.cell[0][2]:\n",
+    "        if not isFlippableTile(current_State,2,0) and not isFlippableTile(current_State,1,1) and not isFlippableTile(current_State,0,2):\n",
     "            return s.cell[2][0]\n",
     "\n",
-    "        if s.cell[2][1]!=BLANK and s.cell[2][1]==s.cell[1][2] and s.cell[1][2]==s.cell[0][3]:\n",
+    "    if s.cell[2][1]!=BLANK and s.cell[2][1]==s.cell[1][2] and s.cell[1][2]==s.cell[0][3]:\n",
+    "        if not isFlippableTile(current_State,2,1) and not isFlippableTile(current_State,1,2) and not isFlippableTile(current_State,0,3):\n",
     "            return s.cell[2][2]\n",
     "\n",
-    "        if s.cell[3][0]!=BLANK and s.cell[3][0]==s.cell[2][1] and s.cell[2][1]==s.cell[1][2]:\n",
+    "    if s.cell[3][0]!=BLANK and s.cell[3][0]==s.cell[2][1] and s.cell[2][1]==s.cell[1][2]:\n",
+    "        if not isFlippableTile(current_State,3,0) and not isFlippableTile(current_State,2,1) and not isFlippableTile(current_State,1,2):\n",
     "            return s.cell[3][0]\n",
     "\n",
-    "        if s.cell[3][1]!=BLANK and s.cell[3][1]==s.cell[2][2] and s.cell[2][2]==s.cell[1][3]:\n",
+    "    if s.cell[3][1]!=BLANK and s.cell[3][1]==s.cell[2][2] and s.cell[2][2]==s.cell[1][3]:\n",
+    "        if not isFlippableTile(current_State,3,1) and not isFlippableTile(current_State,2,2) and not isFlippableTile(current_State,1,3):\n",
     "            return s.cell[3][1]\n",
     "\n",
-    "        #Another 4 ways through another side \\\n",
+    "    #Another 4 ways through another side \\\n",
     "\n",
-    "        if s.cell[0][1]!=BLANK and s.cell[0][1]==s.cell[1][2] and s.cell[1][2]==s.cell[2][3]:\n",
+    "    if s.cell[0][1]!=BLANK and s.cell[0][1]==s.cell[1][2] and s.cell[1][2]==s.cell[2][3]:\n",
+    "        if not isFlippableTile(current_State,0,1) and not isFlippableTile(current_State,1,2) and not isFlippableTile(current_State,2,3):\n",
     "            return s.cell[0][1]\n",
     "\n",
-    "        if s.cell[0][0]!=BLANK and s.cell[0][0]==s.cell[1][1] and s.cell[2][2]==s.cell[2][2]:\n",
+    "    if s.cell[0][0]!=BLANK and s.cell[0][0]==s.cell[1][1] and s.cell[2][2]==s.cell[2][2]:\n",
+    "        if not isFlippableTile(current_State,0,0) and not isFlippableTile(current_State,1,1) and not isFlippableTile(current_State,2,2):\n",
     "            return s.cell[0][0]\n",
     "\n",
-    "        if s.cell[1][1]!=BLANK and s.cell[1][1]==s.cell[2][2] and s.cell[2][2]==s.cell[3][3]:\n",
+    "    if s.cell[1][1]!=BLANK and s.cell[1][1]==s.cell[2][2] and s.cell[2][2]==s.cell[3][3]:\n",
+    "        if not isFlippableTile(current_State,1,1) and not isFlippableTile(current_State,2,2) and not isFlippableTile(current_State,3,3):\n",
     "            return s.cell[1][1]\n",
     "\n",
-    "        if s.cell[1][0]!=BLANK and s.cell[1][0]==s.cell[2][1] and s.cell[2][1]==s.cell[3][2]:\n",
+    "    if s.cell[1][0]!=BLANK and s.cell[1][0]==s.cell[2][1] and s.cell[2][1]==s.cell[3][2]:\n",
+    "        if not isFlippableTile(current_State,1,0) and not isFlippableTile(current_State,2,1) and not isFlippableTile(current_State,3,2):\n",
     "            return s.cell[1][0]\n",
     "        \n",
     "        \n",
@@ -855,15 +953,15 @@
     "    return TIE\n",
     "            \n",
     "#Test isTerminal by giving it some example boards\n",
-    "print(isTerminal(test_State))\n",
+    "print(isTerminal(current_State))\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
-   "id": "ee184c83",
+   "execution_count": 457,
+   "id": "caff7aba",
    "metadata": {},
    "outputs": [
     {
@@ -871,25 +969,30 @@
      "output_type": "stream",
      "text": [
       "------------------\n",
-      "| Y | Y | Y | Y |\n",
+      "| R | B | W | Y |\n",
       "------------------\n",
-      "| Y | Y | Y | Y |\n",
+      "| Y | W | B | R |\n",
       "------------------\n",
-      "| Y | Y | Y | Y |\n",
+      "| R | B | W | Y |\n",
       "------------------\n",
-      "| Y | Y | Y |   |\n",
-      "------------------\n"
+      "| Y | W | B | R |\n",
+      "------------------\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "print_State(test_State)"
+    "#Checking terminal state using different cases\n",
+    "#current_State.cell[0][0]=2\n",
+    "current_State.cell=[[1, 2, 3, 4], [4, 3, 2, 1], [1, 2, 3, 4], [4, 3, 2, 1]]\n",
+    "print_State(current_State)\n",
+    "print(isTerminal(current_State))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6feb060",
+   "id": "f262fad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "a940feb6",
+   "id": "c2840baa",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "db84c005",
+   "id": "f3b88fa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8305b7ad",
+   "id": "fdd7abed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1088,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "c7dd98cf",
+   "id": "806caab1",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "8b157cc2",
+   "id": "8d5f644b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "id": "2cce26e6",
+   "id": "5c87e2f0",
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 418,
-   "id": "749822ab",
+   "id": "2e4453f8",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 350,
-   "id": "2b032ab2",
+   "id": "29b93017",
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1895,7 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "id": "7bb9fe24",
+   "id": "c5a8c9a9",
    "metadata": {},
    "outputs": [
     {
@@ -1804,16 +1907,16 @@
     }
    ],
    "source": [
-    "if isFlippable(current_State, PROGRAM_WHITE)[0]:\n",
-    "    human_flip(userType)\n",
-    "else:\n",
-    "    print(\"No valid flip available! Just place your tile!\")"
+    "# if isFlippable(current_State, PROGRAM_WHITE)[0]:\n",
+    "#     human_flip(userType)\n",
+    "# else:\n",
+    "#     print(\"No valid flip available! Just place your tile!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "e9e7feb5",
+   "id": "72fcef26",
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2f01df",
+   "id": "d238c37e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daafd878",
+   "id": "54ccd4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1983,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "d4edeb72",
+   "id": "ac83df7f",
    "metadata": {},
    "outputs": [
     {
@@ -1906,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "4bb06849",
+   "id": "105437c0",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bec991c",
+   "id": "3c4ec56d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1941,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b84539ce",
+   "id": "9d8318d3",
    "metadata": {},
    "outputs": [],
    "source": []
